--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -9,7 +9,7 @@ lifecycleRuntimeKtx = "2.6.1"
 activityCompose = "1.8.0"
 composeBom = "2024.09.00"
 hilt = "2.47"
-ditto = "4.0.0"
+ditto = "4.8.1"
 timber = "5.0.1"
 
 [libraries]
@@ -31,7 +31,7 @@ hilt-android = { group = "com.google.dagger", name = "hilt-android", version.ref
 hilt-android-compiler = { group = "com.google.dagger", name = "hilt-android-compiler", version.ref = "hilt" }
 hilt-navigation-compose = { group = "androidx.hilt", name = "hilt-navigation-compose", version.ref = "hilt" }
 
-ditto-android = { group = "co.ditto.ditto", name = "ditto-android", version.ref = "ditto" }
+ditto-android = { group = "live.ditto", name = "ditto", version.ref = "ditto" }
 
 timber = { group = "com.jakewharton.timber", name = "timber", version.ref = "timber" }
 
