🚀🚀🚀ditto repos and mappers🚀🚀

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -11,6 +11,7 @@ composeBom = "2024.09.00"
 hilt = "2.47"
 ditto = "4.8.1"
 timber = "5.0.1"
+kotlinx-serialization = "1.6.3"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -34,10 +35,11 @@ hilt-navigation-compose = { group = "androidx.hilt", name = "hilt-navigation-com
 ditto-android = { group = "live.ditto", name = "ditto", version.ref = "ditto" }
 
 timber = { group = "com.jakewharton.timber", name = "timber", version.ref = "timber" }
-
+kotlinx-serialization-json = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json", version.ref = "kotlinx-serialization" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 kotlin-compose = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
+kotlin-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version = "1.9.24" }
 
